# ColorFringeCalculation

./: .gitignore  ChromFringe_Report.md  ColorFringe_V1.2.ipynb  ColorFringe_V1.3.ipynb  ColorFringe_V1.4.ipynb  ColorFringe_v0.ipynb  ColorFringe_v1.1.ipynb  ColorFringe_v2.0.ipynb  ColorFringe_v2.2.ipynb  ColorFringe_v3.1.ipynb  ColorFringe_v3.2.ipynb  ColorFringe_v3.3.ipynb  ColorFringe_v4.1.ipynb  ColorFringe_v4.2-Copy1.ipynb  ColorFringe_v4.2.ipynb  ColorFringe_v4.3.ipynb  ColorFringe_v4.4.ipynb  ColorFringe_v5.0.ipynb  Conrady Widget.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.ipynb_checkpoints/: ColorFringe_v2.1-checkpoint.ipynb  ColorFringe_v2.2-checkpoint.ipynb  ColorFringe_v2.3-checkpoint.ipynb  ColorFringe_v3.0-checkpoint.ipynb  ColorFringe_v3.2-checkpoint.ipynb  ColorFringe_v3.3-checkpoint.ipynb  ColorFringe_v3.4-checkpoint.ipynb  ColorFringe_v4.0-checkpoint.ipynb  ColorFringe_v4.1-checkpoint.ipynb  ColorFringe_v4.2-Copy1-checkpoint.ipynb  ColorFringe_v4.2-checkpoint.ipynb
examples/: achromat_guideline.ipynb  cfw_demo.ipynb  cfw_fftpsf_demo.ipynb  cfw_geom_demo.ipynb  chl_conrady_predict.ipynb  conrady_fit_validate.ipynb  glass_map.py
notebooks/: Colorfringe_Calculation_4.4.ipynb  achromat_guideline.ipynb  cfw_calculation_demo.ipynb  cfw_demo.ipynb  chl_conrady_predict.ipynb  conrady_fit_comparison.ipynb  conrady_fit_validate.ipynb  lca_conrady_predict.ipynb
references/: cfw_calculation_demo.ipynb  schott-optical-glass.xlsx
report/: AdaptiveSampling_Analysis_EN.md  ChromFringe_Academic_Report.md  ChromFringe_Report.md  Section3_Mathematical_Model.md
(+25 files in other folders)
