[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromf"
version = "0.1.0"
description = "Chromatic color fringing utility package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.16",
    "pandas>=2.3",
    "numba>=0.61",
    "matplotlib>=3.10",
    "optiland",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    'comtypes; sys_platform == "win32"',
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chromf = [
  "data/raw/*.csv",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821"]
